<resources>
    <string name="text_AppName">TravelApp</string>
    <string name="text_Slogan">The most fun way to travel!</string>
    <string name="text_Or">Or</string>
    <string name="text_ForgotPassword">Forgot Password?</string>
    <string name="text_Name">Name</string>
    <string name="text_Email">Email</string>
    <string name="text_Password">Password</string>
    <string name="text_Password2">Confirm Password</string>
    <string name="text_Oops">Oops</string>
    <string name="text_OopsText">Enter your email address below and we\'ll send you a recovery message</string>
    <string name="text_ProfileFriends">12\nFriends</string>
    <string name="text_ProfileFollowers">23\nFollowers</string>
    <string name="text_Bio">Bio</string>
    <string name="text_Lorem">Donec augurk enim, volutpat at ligula et, dictum laoreet sapien.
        Sed maximus feugiat tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla eu mollis leo, eu elementum nisl.
        Curabitur cursus turpis nibh, egestas efficitur diam ts lorem Donec augurk enim, volutpat at ligula et, dictum laoreet sapien.
        Sed maximus feugiat tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla eu mollis leo, eu elementum nisl.
        Curabitur cursus turpis nibh, egestas efficitur diam ts lorem</string>
    <string name="text_JohnDoe">John Doe</string>
    <string name="text_AddAPicture">Add a Picture</string>
    <string name="text_Settings">Settings</string>
    <string name="text_ChangePersonalInformation">Change Personal Information</string>
    <string name="text_Languages">Languages</string>
    <string name="text_Privacy">Privacy</string>
    <string name="text_Notifications">Notifications</string>
    <string name="text_Location">Location</string>
    <string name="text_Blocked">Blocked</string>
    <string name="text_MyMemories">My Memories</string>


    <!-- Hints -->
    <string name="hint_EmailHint">Enter Email</string>
    <string name="hint_PasswordHint">Enter Password</string>
    <string name="hint_ConfirmHint">Confirm Password</string>

    <!-- Button Strings -->
    <string name="button_LoginButton">Log In</string>
    <string name="button_SignUpButton">Sign Up</string>
    <string name="button_SubmitButton">Submit</string>


    <!-- Image Description Strings -->
    <string name="description_AppLogo">App Logo</string>
    <string name="description_ThoughtBubble">Thought Bubble</string>
    <string name="description_MapImage">Map></string>
    <string name="description_ToolbarMapIcon">Globe Icon</string>
    <string name="description_ToolbarAddPictureIcon">Add Picture Icon</string>
    <string name="description_ToolbarProfileIcon">Profile Icon</string>
    <string name="description_Toolbar">Toolbar</string>
    <string name="description_AvatarBackground">Profile Avatar Background</string>
    <string name="description_AvatarImage">Profile Avatar Image</string>
    <string name="description_BinocularsIcon">Binoculars Icon</string>
    <string name="description_GearIcon">Gear Icon</string>
    <string name="description_NotificationIcon">Notification Icon</string>
    <string name="description_AddAvatarPictureIcon">Add Avatar Picture Icon</string>
    <string name="description_NamePlate">Name Plate</string>
    <string name="description_Background">White Background</string>
    <string name="description_settingsProfile">Change Personal Information Icon</string>
    <string name="description_settingsLanguages">Languages Icon</string>
    <string name="description_settingsPrivacy">Privacy Icon</string>
    <string name="description_settingsNotifications">Notifications Icon</string>
    <string name="description_settingsLocation">Location Icon</string>
    <string name="description_settingsBlocked">Blocked Icon</string>
    <string name="description_cameraIcon">Camera Icon</string>
    <string name="description_galleryImage">Gallery Stock Image</string>

    <!-- Mapbox -->
    <string name="access_token">pk.eyJ1Ijoia3VueW9taSIsImEiOiJjanZmM3Z0YXUwMzZsNDRtN2ZnZTRibGgxIn0.cCiixvU4TEMi697gIFmPqw</string>

    <string name="user_location_permission_explanation">Something about permissions, replace later</string>
    <string name="user_location_permission_not_granted">Location Permission not granted</string>

    <!-- GeoJSON delete probably -->
    <string name="geoJsonString">{
  "type": "FeatureCollection",
  "features": [
    {
      "type": "Feature",
      "properties": {
        "marker-color": "#e10000",
        "marker-size": "medium",
        "marker-symbol": ""
      },
      "geometry": {
        "type": "Point",
        "coordinates": [
          4.483864903450012,
          51.91720067681145
        ]
      }
    },
    {
      "type": "Feature",
      "properties": {
        "marker-color": "#00b8fd",
        "marker-size": "medium",
        "marker-symbol": ""
      },
      "geometry": {
        "type": "Point",
        "coordinates": [
          4.481241703033447,
          51.918236310161866
        ]
      }
    }
  ]
}</string>

    <!-- Infowindow SymbolLayer -->
    <string name="capital">Description: %1$s</string>
    <string name="tap_on_marker_instruction">Tap on a marker</string>
</resources>
