<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/image_Logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="220dp"
        android:background="@drawable/sunset_background"
        android:contentDescription="@string/description_AppLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Slogan"
        app:srcCompat="@drawable/palm_silhouette"
        tools:srcCompat="@drawable/palm_silhouette" />

    <TextView
        android:id="@+id/text_AppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/text_AppName"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_Slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/text_Slogan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_AppName" />

    <EditText
        android:id="@+id/editText_Email"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/drawable_rounded_corners"
        android:backgroundTint="@color/colorBlack"
        android:ems="10"
        android:hint="@string/hint_EmailHint"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"

        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorGreyLight"
        app:layout_constraintEnd_toEndOf="@+id/editText_Password"
        app:layout_constraintStart_toStartOf="@+id/editText_Password"
        app:layout_constraintTop_toBottomOf="@+id/image_Logo"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editText_Password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/drawable_rounded_corners"
        android:backgroundTint="@color/colorBlack"
        android:ems="10"
        android:hint="@string/hint_PasswordHint"
        android:inputType="textPassword"
        android:paddingStart="20dp"

        android:paddingEnd="20dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorGreyLight"
        app:layout_constraintEnd_toEndOf="@+id/editText_ConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/editText_ConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/editText_Email"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editText_ConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/drawable_rounded_corners"
        android:backgroundTint="@color/colorBlack"
        android:ems="10"
        android:hint="@string/hint_ConfirmHint"
        android:inputType="textPassword"

        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorGreyLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Password"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/button_SignUp"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:onClick="goToMain"
        android:text="@string/button_SignUpButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_ConfirmPassword" />


</android.support.constraint.ConstraintLayout>