<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MemoriesActivity">

    <TextView
        android:id="@+id/text_Settings2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/text_MyMemories"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/image_Background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.581" />

    <ImageView
        android:id="@+id/image_Background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="96dp"
        android:background="@color/colorWhite"
        android:contentDescription="@string/description_Background"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/drawable_square_corners" />

    <ImageView
        android:id="@+id/image_CameraIcon2"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:contentDescription="@string/description_cameraIcon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_Background"
        app:srcCompat="@drawable/camera_icon" />

    <ImageView
        android:id="@+id/image_Placeholder1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/description_galleryImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_Background"
        app:srcCompat="@drawable/ic_launcher_background" />

    <ImageView
        android:id="@+id/image_Placeholder2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/description_galleryImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_Placeholder1"
        app:srcCompat="@drawable/ic_launcher_background" />

    <ImageView
        android:id="@+id/image_Placeholder3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/description_galleryImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_Placeholder2"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/text_Placeholder1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/drawable_square_corners"
        android:paddingStart="8dp"
        android:paddingTop="5dp"
        android:paddingEnd="8dp"
        android:paddingBottom="5dp"
        android:text="@string/text_Lorem"
        app:layout_constraintBottom_toBottomOf="@+id/image_Placeholder1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_Placeholder1"
        app:layout_constraintTop_toTopOf="@+id/image_Placeholder1" />

    <TextView
        android:id="@+id/text_Placeholder2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/drawable_square_corners"
        android:paddingStart="8dp"
        android:paddingTop="5dp"
        android:paddingEnd="8dp"
        android:paddingBottom="5dp"
        android:text="@string/text_Lorem"
        app:layout_constraintBottom_toBottomOf="@+id/image_Placeholder2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/image_Placeholder1"
        app:layout_constraintTop_toTopOf="@+id/image_Placeholder2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/text_Placeholder3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/drawable_square_corners"
        android:paddingStart="8dp"
        android:paddingTop="5dp"
        android:paddingEnd="8dp"
        android:paddingBottom="5dp"
        android:text="@string/text_Lorem"
        app:layout_constraintBottom_toBottomOf="@+id/image_Placeholder3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/image_Placeholder1"
        app:layout_constraintTop_toTopOf="@+id/image_Placeholder3"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>